--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 numpy
 pandas
- 
+python-dotenv ##helps in reading env file
+mysql-connector-python
+pymysql #helps in connecting database
+scikit-learn
